--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/7701f95fb9.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/css/style.css">
         <title>This is my business card.         
         </title>
     </head>
     <body>
-    <p>This is paragraph.</p>    
+    <div class="card">
+       <div class="photo">
+           <img src="/images/pushistik.jpg" alt="pushistik-photo" class="pushistik-photo">
+       </div> 
+       <div class="content">
+           <h2 class="title">Pushistiks Ostashovs</h2>
+           <h4 class="sub-title">Independent cat</h4>
+           <uo>
+               <li><i class="fas fa-paw"></i>Security</li>
+               <li><i class="fas fa-paw"></i>Inspection</li>
+               <li><i class="fas fa-paw"></i>Support</li>
+           </uo>
+           <div class="phone">
+            <i class="fas fa-mobile-alt"></i>123456
+           </div>
+           <div class="email">
+            <i class="fas fa-envelope"></i><a href = "mailto: pushistik@supercat.com">pushistik@supercat.com</a>
+           </div>
+       </div>
+    </div>  
     </body>
 </html>
     
