fixed link to css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/7701f95fb9.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>This is my business card.         
         </title>
     </head>
     <body>
     <div class="card">
        <div class="photo">
-           <img src="/images/pushistik.jpg" alt="pushistik-photo" class="pushistik-photo">
+           <img src="images/pushistik.jpg" alt="pushistik-photo" class="pushistik-photo">
        </div> 
        <div class="content">
            <h2 class="title">Pushistiks Ostashovs</h2>
